Add functionality to get a thread by id
